# md-generator

./: .gitignore  CODE_OF_CONDUCT.md  COPYRIGHT  LICENSE  README.md  md-generator.code-workspace  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs-pr-preview.yml  docs.yml  python-publish.yml
ai/: CHANGELOG.md  README.md  dependency-graph.json  registry.json
ai/agent/: master-agent.md
ai/agents/: mdengine-archive-agent.md  mdengine-codeflow-agent.md  mdengine-db-agent.md  mdengine-global-agent.md  mdengine-graph-agent.md  mdengine-image-agent.md  mdengine-log-agent.md  mdengine-media-agent.md  mdengine-openapi-agent.md  mdengine-pdf-agent.md  mdengine-playwright-agent.md  mdengine-ppt-agent.md  mdengine-text-agent.md  mdengine-url-agent.md  mdengine-word-agent.md  mdengine-xlsx-agent.md
audio-to-md/: converter.py
audio-to-md/tests/: test_audio_api.py  test_audio_formatter.py  test_ffprobe_helpers.py  test_whisper_language.py
codeflow-to-md/: converter.py
codeflow-to-md/docs/: cache-and-semantic.md  graph-and-outputs.md  remote-repos.md  runtime-trace-schema.md
codeflow-to-md/tests/: test_business_rules.py  test_cache_manager.py  test_cfg_control_flow.py  test_cfg_try.py  test_cli_scan.py  test_cross_repo_resolver.py  test_cytoscape_enrich.py  test_dependency_graph.py  test_diff_analysis.py  test_entry_rank_and_docs.py  test_git_loader.py  test_go_parser.py  test_graph_builder.py  test_graph_enterprise.py  test_graph_structural.py  test_hotpath_anomaly.py  test_ir_adapters_and_event_intel.py  test_ir_cfg.py  test_java_codeflow_extras.py  test_lang_dispatch.py  test_liferay_portlet_detector.py  test_multi_lang_business_rules.py  test_multi_repo_merge.py  test_nl_query.py  test_python_parser.py  test_semantic_clustering.py  test_semantic_enricher.py  test_semantic_index.py  test_trace_runner.py  test_treesitter_js.py
db-to-md/: Dockerfile.api  converter.py
db-to-md/tests/: test_combined_readme.py  test_db_api_sqlite_upload.py  test_erd.py  test_job_manager.py  test_markdown_writer.py  test_mssql_access_factory.py  test_mysql_adapter_rowdict.py  test_run_config.py  test_sqlite_adapter.py  test_util.py
deploy/: docker-compose.yml
deploy/nginx/: default.conf
docs/: index.md
docs/ai-ml/: datasets.md  embeddings.md  inference-flow.md  models.md  pipelines.md  vector-database.md
docs/api/: authentication.md  endpoints.md  error-handling.md  examples.md  overview.md  request-response.md
docs/architecture/: data-flow.md  deployment-architecture.md  hld.md  lld.md  module-interactions.md  overview.md  sequence-diagrams.md  system-design.md
docs/database/: indexing.md  migrations.md  optimization.md  schema.md
docs/deployment/: ci-cd.md  docker.md  helm.md  kubernetes.md  production-checklist.md  scaling.md
docs/development/: coding-standards.md  debugging.md  linting.md  project-structure.md  release-process.md  testing-strategy.md
docs/getting-started/: environment-setup.md  installation.md  introduction.md  local-development.md  prerequisites.md  quick-start.md
docs/integrations/: cloud-services.md  elasticsearch.md  external-apis.md  kafka.md  mongodb.md  postgres.md  redis.md
docs/non-technical/: business-overview.md  faq.md  glossary.md  onboarding.md  user-guide.md
docs/operations/: alerting.md  logging.md  monitoring.md  observability.md  troubleshooting.md
docs/reference/: commands.md  configuration-reference.md  dependencies.md  environment-variables.md
docs/specifications/: MDAF.md
graph-to-md/: Dockerfile.api
graph-to-md/tests/: test_extractor_graphml.py  test_graph_builder.py  test_job_manager.py  test_markdown_writer.py  test_mermaid.py
image-to-md/: Dockerfile.api  README.md  converter.py  requirements-api.txt  requirements-dev.txt  requirements-ocr.txt  requirements.txt
image-to-md/api/: main.py  mcp_server.py  query_options.py  settings.py  staging.py  zip_bundle.py
image-to-md/src/: __init__.py  convert_impl.py  converter.py  utils.py
image-to-md/tests/: test_api.py  test_convert.py  test_emit.py  test_image_api.py  test_image_convert.py  test_io_recursive.py
log-presets/: README.md  myformat.yaml
log-to-md/: converter.py
log-to-md/tests/: test_archive_bridge.py  test_archive_tar_gz.py  test_chunking.py  test_cross_source_otel.py  test_golden_snapshot.py  test_incident_snapshot.py  test_incidents.py  test_incremental.py  test_json_log_parser.py  test_log_api.py  test_mdaf_validate.py  test_multiline_parser.py  test_noise_reduction.py  test_otel.py  test_otel_adapter.py  test_pipeline_e2e.py  test_preset_loader.py  test_telemetry_schema.py  test_unicode_fixture.py
mdengine-skill/tests/: test_adapters.py  test_chunks.py  test_rag_optional.py  test_registry.py
openapi-to-md/: Dockerfile.api  converter.py
openapi-to-md/tests/: test_api_generate.py  test_cli_generate.py  test_dependency_graph.py  test_extractor.py  test_mcp_stack.py  test_openapi_parser.py  test_schema_flatten.py  test_swagger2_conversion.py
otel-to-md/: converter.py
pdf-to-md/: README.md  converter.py  requirements-api.txt  requirements.txt
pdf-to-md/api/: main.py  mcp_server.py  zip_bundle.py
pdf-to-md/src/: converter.py  md_emit.py  pdf_extract.py
pdf-to-md/tests/: build_fixture.py  conftest.py  test_api.py  test_cli_convert.py  test_md_emit.py  test_pdf_api.py
playwright-to-md/: README.md
ppt-to-md/: Dockerfile.api  README.md  converter.py  requirements-mcp.txt  requirements.txt
scripts/: run-docs-cli.ps1  run-docs-cli.sh  run-log-otel-examples.ps1  run_codeflow_batch.ps1
tools/: __init__.py
txt-json-xml-to-md/: converter.py  requirements-api.txt
url-to-md/: Dockerfile.api  README.md  converter.py  requirements-mcp.txt  requirements.txt
video-to-md/: converter.py  requirements.txt
word-to-md/: README.md  converter.py  requirements-api.txt  requirements-dev.txt  requirements.txt  run.py
xlsx-to-md/: Dockerfile.api  README.md  converter.py  requirements.txt  run.py
youtube-to-md/: README.md  converter.py  pytest.ini
zip-to-md/: converter.py  pytest.ini  requirements.txt
(+1053 files in other folders)
