[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdengine"
version = "0.8.0"
description = "Convert PDF, Office, images, audio, video, text/JSON/XML, ZIP archives, web URLs, databases, graphs, and OpenAPI specs to Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "mdengine contributors" }]
keywords = ["markdown", "pdf", "docx", "pptx", "xlsx", "ocr", "zip", "url", "html", "youtube", "playwright", "database", "openapi", "codeflow"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0", "pdfplumber>=0.11.0"]
word = ["mammoth>=1.8.0", "markdownify>=0.13.0"]
ppt = [
  "python-pptx>=1.0.0",
  "Pillow>=10.0.0",
  "lxml>=5.0.0",
  "olefile>=0.47",
  "openpyxl>=3.1.0",
  "mammoth>=1.8.0",
  "markdownify>=0.14.0",
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "pytesseract>=0.3.10",
]
xlsx = ["openpyxl>=3.1.0"]
image = ["Pillow>=10.0.0"]
image-ocr = [
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "numpy>=1.24.0",
  "paddlepaddle>=2.5.0",
  "paddleocr>=2.7.0.3",
  "easyocr>=1.7.0",
]
text = []
archive = ["Pillow>=10.0.0", "pytesseract>=0.3.10"]
url = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "lxml_html_clean>=0.4.0",
  "markdownify>=0.14.0",
  "readability-lxml>=0.8.1",
]
# Convenience extra for URL fetch + post-convert of downloaded office/PDF/ZIP/etc.
url-full = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "lxml_html_clean>=0.4.0",
  "markdownify>=0.14.0",
  "readability-lxml>=0.8.1",
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "mammoth>=1.8.0",
  "python-pptx>=1.0.0",
  "Pillow>=10.0.0",
  "olefile>=0.47",
  "openpyxl>=3.1.0",
  "pytesseract>=0.3.10",
]
# Whisper + PyTorch; metadata uses ffprobe when available, else ``ffmpeg -i`` (see imageio-ffmpeg).
audio = ["openai-whisper>=20231117", "imageio-ffmpeg>=0.5.1"]
# Same ML stack as audio; ships a bundled ``ffmpeg`` binary when the system has none.
video = ["openai-whisper>=20231117", "imageio-ffmpeg>=0.5.1"]
youtube = [
  "youtube-transcript-api>=0.6.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
]
# Playwright-rendered SPA → Markdown (install browsers: playwright install chromium).
playwright = [
  "playwright>=1.49.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "markdownify>=0.14.0",
  "readability-lxml>=0.8.1",
  "Pillow>=10.0.0",
]
db = [
  "sqlalchemy>=2.0.0",
  "pyyaml>=6.0.0",
  "psycopg2-binary>=2.9.9",
  "pymysql>=1.1.0",
  "oracledb>=2.0.0",
  "pymongo>=4.6.0",
  "mermaid-py>=0.8.0",
]
graph = [
  "networkx>=3.2.0",
  "neo4j>=5.14.0",
  "pyyaml>=6.0.0",
]
openapi = [
  "pyyaml>=6.0.0",
  "prance>=23.6.0",
  "openapi-spec-validator>=0.7.0",
]
codeflow = [
  "networkx>=3.2.0",
  "javalang>=0.13.0",
]
codeflow-treesitter = [
  "tree-sitter>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-cpp>=0.23.0",
]
codeflow-clang = [
  "clang>=16.0.0",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "httpx>=0.27.0",
  "pydantic-settings>=2.0.0",
]
mcp = ["mcp>=1.2.0", "fastmcp>=2.3.0"]
# Optional: AI skill bundle helpers (tools.mdengine_skill)
skill-openai = ["openai>=1.30.0"]
skill-rag-chroma = ["chromadb>=0.4.22"]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "youtube-transcript-api>=0.6.0",
  "mdengine[api]",
  "mdengine[mcp]",
  "mdengine[url]",
  "mdengine[playwright]",
  "mdengine[db]",
  "mdengine[graph]",
  "mdengine[openapi]",
  "mdengine[codeflow]",
  "mdengine[codeflow-treesitter]",
]
all = [
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "mammoth>=1.8.0",
  "markdownify>=0.14.0",
  "python-pptx>=1.0.0",
  "Pillow>=10.0.0",
  "lxml>=5.0.0",
  "olefile>=0.47",
  "openpyxl>=3.1.0",
  "pytesseract>=0.3.10",
  "numpy>=1.24.0",
  "paddlepaddle>=2.5.0",
  "paddleocr>=2.7.0.3",
  "easyocr>=1.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "httpx>=0.27.0",
  "pydantic-settings>=2.0.0",
  "mcp>=1.2.0",
  "fastmcp>=2.3.0",
  "beautifulsoup4>=4.12.0",
  "lxml_html_clean>=0.4.0",
  "readability-lxml>=0.8.1",
  "youtube-transcript-api>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/vishal7090/md-generator"
Repository = "https://github.com/vishal7090/md-generator"
Issues = "https://github.com/vishal7090/md-generator/issues"

[project.scripts]
md-pdf = "md_generator.pdf.converter:main"
md-word = "md_generator.word.converter:main"
md-ppt = "md_generator.ppt.converter:main"
md-xlsx = "md_generator.xlsx.converter:main"
md-image = "md_generator.image.converter:main"
md-text = "md_generator.text.converter:main"
md-zip = "md_generator.archive.converter:main"
md-url = "md_generator.url.converter:main"
md-audio = "md_generator.media.audio.converter:main"
md-video = "md_generator.media.video.converter:main"
md-audio-api = "md_generator.media.audio.api.run:main"
md-video-api = "md_generator.media.video.api.run:main"
md-audio-mcp = "md_generator.media.audio.api.mcp_server:main"
md-video-mcp = "md_generator.media.video.api.mcp_server:main"
md-youtube = "md_generator.media.youtube.converter:main"
md-youtube-api = "md_generator.media.youtube.api.run:main"
md-youtube-mcp = "md_generator.media.youtube.api.mcp_server:main"
md-playwright = "md_generator.playwright.cli:main"
md-playwright-api = "md_generator.playwright.api.run:main"
md-playwright-mcp = "md_generator.playwright.api.mcp_server:main"
md-db = "md_generator.db.cli.main:main"
md-db-api = "md_generator.db.api.run:main"
md-db-mcp = "md_generator.db.api.mcp_server:main"
md-graph = "md_generator.graph.cli.main:main"
md-graph-api = "md_generator.graph.api.run:main"
md-graph-mcp = "md_generator.graph.api.mcp_server:main"
md-openapi = "md_generator.openapi.cli.main:main"
md-openapi-api = "md_generator.openapi.api.run:main"
md-openapi-mcp = "md_generator.openapi.api.mcp_server:main"
md-codeflow = "md_generator.codeflow.cli.main:main"
codeflow = "md_generator.codeflow.cli.main:main"
md-codeflow-api = "md_generator.codeflow.api.run:main"
md-codeflow-mcp = "md_generator.codeflow.api.mcp_server:main"
mdengine = "md_generator.engine_cli:main"
mdengine-skill = "tools.mdengine_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["md_generator*", "tools*"]

[tool.setuptools.package-data]
"md_generator.db.config" = ["*.yaml"]
"md_generator.graph.config" = ["*.yaml"]
"md_generator.openapi.config" = ["*.yaml"]
"tools.mdengine_skill" = ["data/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = [
  "mdengine-skill/tests",
  "pdf-to-md/tests",
  "word-to-md/tests",
  "ppt-to-md/tests",
  "xlsx-to-md/tests",
  "image-to-md/tests",
  "txt-json-xml-to-md/tests",
  "zip-to-md/tests",
  "url-to-md/tests",
  "audio-to-md/tests",
  "video-to-md/tests",
  "youtube-to-md/tests",
  "playwright-to-md/tests",
  "db-to-md/tests",
  "graph-to-md/tests",
  "openapi-to-md/tests",
  "codeflow-to-md/tests",
]
markers = ["integration: optional dependency or slower checks"]
